# ikigai-repo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: repo-demo.rs
src/: lib.rs
