[package]
name = "ikigai-repo"
description = "Git / gh / cargo as ikigai resources: a capability-gated exec seam + typed repo facades (urn:system:exec, urn:repo:*)."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-repo"

[dependencies]
# The released kernel, consumed from crates.io. This module is NATIVE-ONLY: it
# spawns subprocesses (std::process), the one thing a wasm module can't — the
# platform seam, like ikigai-personal's EventKit. No wasm face by design.
ikigai-core = "0.1.39"

[dev-dependencies]
futures = "0.3"
